--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,7 +12,6 @@
   border:none !important;
   outline: none !important;
   text-decoration: none !important;
-  text-transform: capitalize;
   font-weight: 400;
   transition: all .2s linear;
 }
@@ -84,7 +83,7 @@ section{
 
 header{
   width:100%;
-  position: fixed;
+  position: absolute;
   top:0; left: 0;
   padding:2rem 1rem;
   z-index: 1000;
