--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -82,18 +82,16 @@ section{
 }
 
 header{
+  background-color:rgb(255, 255, 255,0.3);
+  height: 80px;
   width:100%;
-  position: absolute;
+  position: fixed;
   top:0; left: 0;
-  padding:2rem 1rem;
+  padding:0rem 1rem;
   z-index: 1000;
 }
 
-.header-active{
-  background:#fff;
-  box-shadow: 0 .1rem .3rem rgba(0,0,0,.3);
-  padding: .5rem 1rem;
-}
+
 
 header .container{
   display: flex;
@@ -101,13 +99,7 @@ header .container{
   justify-content: space-between;
 }
 
-header a{
-  color:var(--black);
-}
 
-header a:hover{
-  color:var(--blue);
-}
 
 header .container .logo{
   font-size: 3rem;
@@ -117,7 +109,7 @@ header .container .logo span{
   color:var(--blue);
 }
 
-header .nav ul{
+/*header .nav ul{
   margin:0; padding: 0;
   display: flex;
   align-items: center;
@@ -131,13 +123,125 @@ header .nav ul li{
 
 header .nav ul li a{
   font-size: 2rem;
+}*/
+
+
+nav{
+  background: none;
+  height: 80px;
+  width: 100%;
+}
+label.logo{
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  color:var(--black);
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
 }
 
-header .fa-bars{
+
+header a:hover{
+  color:var(--blue);
+}
+.checkbtn{
   font-size: 3.5rem;
   color:var(--blue);
   cursor: pointer;
   display: none;
+  
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  
+}
+#check{
+  display: none;
+  
+}
+
+@media (max-width: 951px){
+  
+  nav ul li a{
+    font-size: 16px;
+    color: white;
+  }
+  
+.checkbtn{
+  padding-right: -9px;
+}
+
+.navbar-brand{
+  position: relative;
+  font-size: 30px;
+  
+  padding-left: 50px;
+}
+  
+}
+@media (min-width: 768px) and (max-width: 1024px){
+header {
+    height: 0.2px;
+}}
+@media (max-width: 960px){
+  
+  
+
+.navbar-brand{
+  position: relative;
+  font-size: 30px;
+  
+  padding-left: 50px;
+}
+  .checkbtn{
+    position: sticky;
+    display: block;
+    z-index: 999;
+  }
+  ul{
+    
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 0px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+  
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a{
+    font-size: 20px;
+  }
+  nav ul li  a:hover ,a.active{
+    
+    color: #0082e6;
+  }
+  
+  #check:checked ~ ul{
+    left: 0;
+  }
+  
 }
 
 .home .content h1{
@@ -466,7 +570,7 @@ header .fa-times{
     font-size: 55%;
   }
 
-  header .fa-bars{
+  /*header .fa-bars{
     display: block;
   }
 
@@ -502,7 +606,7 @@ header .fa-times{
   header .nav-toggle{
     top:50%;
     opacity: 1;
-  }
+  }*/
 
   .contact form .inputBox input, select{
     width: 100%;
